--- a/index.html
+++ b/index.html
@@ -10,5 +10,64 @@
 </head>
 <body>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12">12 col</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-8">8 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-2">2 col</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-1">1 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-6">6 col</div>
+      <div class="col-1">1col</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <div class="container">
+          <div class="col-2 nested"> Nested 2 col</div>
+          <div class="col-2 nested"> Nested 2 col</div>
+          <div class="col-8 nested"> Nested 8 col</div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="container">
+          <div class="col-6 nested">Nested 6 col</div>
+          <div class="col-6 nested">Nested 6 col</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
